--- a/gaokao/tijian/index.html
+++ b/gaokao/tijian/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学生体检数据检查</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href="../../lib/bootstrap.5.3.5.min.css" rel="stylesheet">
-    <script src="../../lib/vue.3.5.17.global.prod.js"></script>
-    <script src="../../lib/xlsx.0.20.3.mini.min.js"></script>
-    <script src="../../lib/bootstrap.5.3.5.bundle.min.js"></script>
+    <link href="../../lib/bootstrap/5.3.8/bootstrap.min.css" rel="stylesheet">
+    <script src="../../lib/bootstrap/5.3.8/bootstrap.bundle.min.js"></script>
+    <script src="../../lib/vue/3.5.20/vue.global.prod.js"></script>
+    <script src="../../lib/sheetjs/0.20.3/xlsx.mini.min.js"></script>
 </head>
 <body>
 <div id="app" class="m-4">
