添加试场编排工具链接，提升考务材料编排效率

--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
+                <a href="./common/exam-rooms-arrange/index.html" target="_blank" class="text-decoration-none">
+                    <div class="card tool-card">
+                        <div class="card-body text-center">
+                            <div class="tool-icon mx-auto">🏫</div>
+                            <h5 class="card-title">试场编排工具</h5>
+                            <p class="card-text">
+                                根据考生名单和考场信息，自动生成试场核对单、准考证、桌贴等考务材料，提升编排效率。</p>
+                            <small class="text-muted">点击进入工具 →</small>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- 高考工具 -->
