优化Excel导出提示信息，修正考场号显示字段

--- a/common/exam-rooms-arrange/index.html
+++ b/common/exam-rooms-arrange/index.html
@@ -307,7 +307,7 @@
                             </div>
                             <div class="desk-label-info-item">
                                 <div class="desk-label-info-label">考场号</div>
-                                <div class="desk-label-info-value">{{ page.room.name }}</div>
+                                <div class="desk-label-info-value">{{ page.room.roomName }}</div>
                             </div>
                         </div>
 
