添加选考报名数据校验功能，支持Excel文件解析与数据验证

--- a/index.html
+++ b/index.html
@@ -221,43 +221,23 @@
                     </div>
                 </a>
             </div>
-        </div>
 
-        <!-- 自考工具 -->
-        <h2 class="category-heading">自学考试工具</h2>
-        <div class="row g-4 mb-5">
             <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
-                <a href="#" onclick="alert('功能开发中...'); return false;" class="text-decoration-none">
+                <a href="./gaokao/baoming-check/index.html" target="_blank" class="text-decoration-none">
                     <div class="card tool-card">
                         <div class="card-body text-center">
                             <div class="tool-icon mx-auto">📋</div>
-                            <h5 class="card-title">自考报名助手</h5>
+                            <h5 class="card-title">选考报名数据校验</h5>
                             <p class="card-text">
-                                自考报名流程指导，提供报名时间提醒、材料准备清单等功能。帮助考生顺利完成自考报名。</p>
-                            <small class="text-muted">功能开发中...</small>
+                                可以解析选考报名的Excel文件，校验其中选考报名的数据是否有冲突、异常，并形成导出数据可以核对。
+                            </p>
+                            <small class="text-muted">点击进入工具 →</small>
                         </div>
                     </div>
                 </a>
             </div>
         </div>
 
-        <!-- 转换工具 -->
-        <h2 class="category-heading">转换工具</h2>
-        <div class="row g-4 mb-5">
-            <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
-                <a href="#" onclick="alert('功能开发中...'); return false;" class="text-decoration-none">
-                    <div class="card tool-card">
-                        <div class="card-body text-center">
-                            <div class="tool-icon mx-auto">🔄</div>
-                            <h5 class="card-title">文件格式转换</h5>
-                            <p class="card-text">
-                                支持多种文件格式转换，包括PDF、Word、Excel等。批量转换功能，提高工作效率。</p>
-                            <small class="text-muted">功能开发中...</small>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
     </div>
 
     <!-- 页脚 -->
