添加高考报名数据校验工具，支持PDF文件解析与数据验证

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
-                <a href="./gaokao/baoming-check/index.html" target="_blank" class="text-decoration-none">
+                <a href="gaokao/xk-baoming-check/index.html" target="_blank" class="text-decoration-none">
                     <div class="card tool-card">
                         <div class="card-body text-center">
                             <div class="tool-icon mx-auto">📋</div>
@@ -236,6 +236,22 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
+                <a href="./gaokao/gk-baoming-check/index.html" target="_blank" class="text-decoration-none">
+                    <div class="card tool-card">
+                        <div class="card-body text-center">
+                            <div class="tool-icon mx-auto">📋</div>
+                            <h5 class="card-title">高考报名数据校验-考生报名表PDF</h5>
+                            <p class="card-text">
+                                可以解析考生报名表PDF文件，校验其中报名的数据是否有冲突、异常，并形成导出数据可以核对。
+                            </p>
+                            <small class="text-muted">点击进入工具 →</small>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
         </div>
 
     </div>
