更新PDF.js导入路径，使用.mjs扩展名以支持模块化

--- a/gaokao/gk-baoming-check/index.html
+++ b/gaokao/gk-baoming-check/index.html
@@ -90,7 +90,7 @@
     <script src="../../lib/jszip/3.10.1/jszip.min.js"></script>
 
     <script type="module">
-        import * as pdfjsLib from "../../lib/pdfjs/5.4.394/pdf.min.js";
+        import * as pdfjsLib from "../../lib/pdfjs/5.4.394/pdf.min.mjs";
         pdfjsLib.GlobalWorkerOptions.workerSrc = new URL(
             "../../lib/pdfjs/5.4.394/pdf.worker.min.mjs",
             import.meta.url
