更新PDF.js和工作线程文件扩展名，从.mjs更改为.js以确保兼容性

--- a/gaokao/gk-baoming-check/index.html
+++ b/gaokao/gk-baoming-check/index.html
@@ -90,9 +90,9 @@
     <script src="../../lib/jszip/3.10.1/jszip.min.js"></script>
 
     <script type="module">
-        import * as pdfjsLib from "../../lib/pdfjs/5.4.394/pdf.min.mjs";
+        import * as pdfjsLib from "../../lib/pdfjs/5.4.394/pdf.min.js";
         pdfjsLib.GlobalWorkerOptions.workerSrc = new URL(
-            "../../lib/pdfjs/5.4.394/pdf.worker.min.mjs",
+            "../../lib/pdfjs/5.4.394/pdf.worker.min.js",
             import.meta.url
         ).href;
         window.pdfjsLib = pdfjsLib;
