添加考试考务材料打印工具，包含文件选择、数据处理和打印功能

--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 tool-item">
+                <a href="./common/exam-materials-print/index.html" target="_blank" class="text-decoration-none">
+                    <div class="card tool-card">
+                        <div class="card-body text-center">
+                            <div class="tool-icon mx-auto">📊</div>
+                            <h5 class="card-title">考试考务材料打印工具</h5>
+                            <p class="card-text">
+                                根据考务材料模板生成交接单、信封、试卷捆等材料。</p>
+                            <small class="text-muted">点击进入工具 →</small>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- 高考工具 -->
