调整单页重复显示选项的默认值，以改善用户体验

--- a/common/exam-box-print/index.html
+++ b/common/exam-box-print/index.html
@@ -18,10 +18,10 @@
         <div class="radio-group">
             <label>单页重复显示：</label>
             <label>
-                <input type="radio" name="duplicate" value="0" checked> 否
+                <input type="radio" name="duplicate" value="0"> 否
             </label>
             <label>
-                <input type="radio" name="duplicate" value="1"> 是
+                <input type="radio" name="duplicate" value="1" checked> 是
             </label>
             <span>(即A4纸上下半页是否重复相同)</span>
         </div>
